BuildHughes/translation-tool/inputs/source_meta/objects/Warranty_Master__c.object
<CustomObject>
    <description>Warranty Master</description>
    <fields>
        <fullName>DSS_OPT_Code__c</fullName>
        <description>DSS OPT Code</description>
        <inlineHelpText>DSS OPT Code</inlineHelpText>
        <label>DSS OPT Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Type__c</fullName>
        <description>Dispatch Type</description>
        <inlineHelpText>Dispatch Type</inlineHelpText>
        <label>Dispatch Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maintenance_Code__c</fullName>
        <description>Remote Maintenance Code</description>
        <inlineHelpText>Remote Maintenance Code</inlineHelpText>
        <label>Remote Maintenance Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Maintenance_Name__c</fullName>
        <description>Remote Maintenance Name</description>
        <inlineHelpText>Remote Maintenance Name</inlineHelpText>
        <label>Remote Maintenance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Id__c</fullName>
        <description>Warranty Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Warranty Id</inlineHelpText>
        <label>Warranty Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warranty_Length_UOM__c</fullName>
        <description>Warranty Length UOM</description>
        <inlineHelpText>Warranty Length UOM</inlineHelpText>
        <label>Warranty Length UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Length__c</fullName>
        <description>Warranty Length</description>
        <inlineHelpText>Warranty Length</inlineHelpText>
        <label>Warranty Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_SAP_Part_No_After_Vesting__c</fullName>
        <description>Warranty SAP Part No After Vesting</description>
        <inlineHelpText>Warranty SAP Part No After Vesting</inlineHelpText>
        <label>Warranty SAP Part No After Vesting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_SAP_Part_No_Before_Vesting__c</fullName>
        <description>Warranty SAP Part No Before Vesting</description>
        <inlineHelpText>Warranty SAP Part No Before Vesting</inlineHelpText>
        <label>Warranty SAP Part No Before Vesting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Vesting_Days__c</fullName>
        <description>Warranty Vesting Days</description>
        <inlineHelpText>Warranty Vesting Days</inlineHelpText>
        <label>Warranty Vesting Days</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Warranty Master</label>
    <nameField>
        <label>Warranty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>